# adk-openui-example

./: .env.example  .pre-commit-config.yaml  README.md  poe.toml  pyproject.toml
.devcontainer/: Dockerfile  cloudflare_gateway_ca_g2_722d63.crt  devcontainer-lock.json  devcontainer.json
.devcontainer/scripts/: post-create.sh
backend/: README.md  pyproject.toml
backend/src/backend/: _app.py  _config.py  _constants.py  _dishka_providers.py  main.py
backend/src/backend/agents/: __init__.py  _config.py  _simple_agent.py  system-prompt.txt
backend/src/backend/api/: __init__.py  _dummy.py  _health.py  _simple_agent.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
