[project]
name = "backend"
version = "0.0.1"
description = "Backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "dishka>=1.6.0",
    "ag-ui-adk>=0.6.5",
    "litellm>=1.88.0",
]

[dependency-groups]
dev = [
]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
artifacts = []

[tool.ruff]
extend = "../pyproject.toml"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
